# MyWebSite

./: .dockerignore  .gitignore  docker-compose.yml
back/: Dockerfile  pyproject.toml
back/alembic/: env.py
back/alembic/versions/2026/05/: 24_1743_27_bd021304033d_creating_tables_for_articles_and_images.py  24_2144_53_e59117be9c6d_change_type_and_name_of_column_text.py  28_2234_13_7c609dee3717_change_name_of_column.py  30_1141_09_2bbf74104b30_add_another_table_for_article_s_images.py  30_1417_58_362e0f1e6770_add_some_additional_columns_to_article_.py
back/src/: main.py
back/src/api/: website.py
back/src/api/schemas/: entities.py
back/src/db/: config.py  db_helper.py  db_manager.py
back/src/db/models/: base.py
back/src/db/models/tables/: articles.py
back/src/utils/: logger.py
front/: .cta.json  Dockerfile  index.html  mdx.d.ts  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
front/public/me_svg/iconc_components/: Icon1.tsx  Icon2.tsx  Icon3.tsx  Icon4.tsx
front/src/: main.tsx  routeTree.gen.ts  styles.css
front/src/components/: LogoML.tsx  NavBarIcon.tsx  NavigationBar.tsx
front/src/routes/: __root.tsx  about.tsx  dl.tsx  index.tsx  llm.tsx
front/src/routes/ml/: $route.tsx  -ArticleImage.tsx  -DataFetcher.tsx  -JSXgraph.tsx  -LaTeX.tsx  Test.mdx  index.tsx
