[project]
name = "ml-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.29",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
]
